# thesis

./: README.md
kinetic-scheme-visualizer/: package-lock.json  requirements.txt
pyglotaran-assistant/: README.md  requirements.txt  simulation_config.txt  test-dataset.nc  test-model.yaml  test-parameter.csv  yaml_debug.ipynb  yaml_debug_pyglotaran.ipynb
pyglotaran-assistant/pyglotaran-assistant/: LICENSE  pyproject.toml
pyglotaran-assistant/pyglotaran-assistant/.cache/41/: cache.db
pyglotaran-assistant/pyglotaran-assistant/pyglotaran_assistant/: llm.py  provider.py  slash_command.py
pyglotaran-assistant/pyglotaran-assistant/pyglotaran_assistant/agents/: agent_group.py  config.json  functions.py  pyglotaran_assistant.py  utils.py
pyglotaran-assistant/pyglotaran-assistant/pyglotaran_assistant/agents/.cache/41/: cache.db
pyglotaran-assistant/pyglotaran-assistant/pyglotaran_assistant/agents/knowledge_base/: setup.py
pyglotaran-assistant/pyglotaran-assistant/pyglotaran_assistant/tests/: __init__.py
pyglotaran-assistant/test_files/: broken_kin_model.yaml  correct.yaml  kin_params.yaml
pyglotaran-assistant/test_files/.ipynb_checkpoints/: broken-checkpoint.yaml
